--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/Columms-card/assets/favicon-32x32-DQjEQYWa.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="A preview card component with 3 columms using React JS and Styled-components">
     <title>Frontend Mentor | 3-column preview card component</title>
